--- a/src/components/AppStore/index.css
+++ b/src/components/AppStore/index.css
@@ -12,9 +12,9 @@
   justify-content: center;
   align-items: center;
 }
-.apps-container {
+.search-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }
